Bug 1561288 - Don't override currentContent when focusing something on a shadow root. r=smaug

It is wrong, what we're trying to focus is frame->GetContent() still.

This is not reproducible outside of Thunderbird because for it to happen the
focus manager needs to wrap around the start content.

Here's what's going on:

 * We start with a <tree> focused, which is a shadow host.
 * There's nothing else to focus inside the <tree>, or after the <tree> in document order.
 * So we restart the search with a different tabindex (1), but find nothing before the tree (since all focusable elements before the tree also have tabindex 0), and we return wrongly in [1], instead of searching with tabindex 0 again afterwards. (Since the child frame is not focusable, we wrongly end up at [1], and returning early, since currentContent != frame->GetContent(), instead of keeping looking for the right thing to focus.)

As I said this cannot reproduce on content, as far as I can tell, so I'm not
sure how to go about testing this, but all the shadow dom tab navigation tests
keep passing with this change.

[1]: https://searchfox.org/mozilla-central/rev/06bd14ced96f25ff1dbd5352cb985fc0fa12a64e/dom/base/nsFocusManager.cpp#3560

Differential Revision: https://phabricator.services.mozilla.com/D36196